# LASERNet

./: .gitignore  FAST_LOADING.md  GPU_QUICKSTART.md  LASERNet_Colab.ipynb  LICENSE  MICROSTRUCTURE_PREDICTION.md  MICROnet.ipynb  MODEL_ARCHITECTURE.md  PREDICTION_USAGE.md  PREDRNN_README.md  QUICKSTART.md  README.md  REDUCE_BLURRINESS.md  SETUP_NOTES.md  SUMMARY.md  TESTING_GUIDE.md  TempNet.ipynb  claude.md  compare_loading_speeds.py  data  makefile  microstructure_training.py  predict_microstructure.py  pyproject.toml  tasks.py  test.py  test_device_support.py  test_fast_loading.py  test_microstructure.py  train.py  train_micro_net_cnn_lstm.py  train_micro_net_predrnn.py  train_microstructure.py  visualize_all_predictions.py  visualize_data_timesteps.py  visualize_individual_timesteps.py  visualize_microstructure_test.py  visualize_model_architecture.py  visualize_model_predictions.py  visualize_solidification_mask.py  (+2 more)
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: linting.yaml  tests.yaml
batch/scripts/: pipeline.sh  run-exp.sh  run-seqlen-exp.sh  train.sh  train_MICROnet_notebook.sh  train_micro_net.sh  train_micro_net_cnn_lstm.sh  train_micro_net_cnn_lstm_1.sh  train_micro_net_cnn_lstm_13.sh  train_micro_net_cnn_lstm_14_sharp.sh  train_micro_net_cnn_lstm_2.sh  train_micro_net_predrnn.sh  (+11 more)
notebooks/: MICROnet.ipynb  TempNet.ipynb  cascaded-prediction-demo.ipynb  data-loading-demo.ipynb  image-sharpening.ipynb  model-prediction-demo.ipynb  model_comparison.py  temperature-prediction.ipynb
report/: References.bib  main.tex
runs_microstructure/: README.md
src/: __init__.py  config.py  dataset.py  evaluate.py  inference.py  main.py  model.py  preprocessing.py  start.sh  train.py  utils.py
tests/: test_normalizer.py  test_utils.py  test_utils_extra.py
(+169 files in other folders)
