[project]
name = "lasernet"
version = "0.1.0"
description = "CNN-LSTM neural network for microstructure evolution prediction"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=10.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.66.0",
]
